Updates mainnet manifest.json

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -22618,6 +22618,223 @@
       "bloomSize": 917570,
       "indexHash": "QmUe4Vo896SL2BfSPdMBjYhDQFsrDvQfpkm1SfFc5LExnY",
       "indexSize": 25231832
+    },
+    {
+      "range": "015939916-015942623",
+      "bloomHash": "QmQ9RRKp4yXs6JgvUX4VS9mTn1CKk6p8auQiaLGwFLz4z7",
+      "bloomSize": 917570,
+      "indexHash": "QmSg5hdai65r3171KEbwz12CMNPRev76kzsuozjwnVmLXm",
+      "indexSize": 25163020
+    },
+    {
+      "range": "015942624-015945756",
+      "bloomHash": "QmXCVNKhSqAdLpcVHT8Tjm2sApfK2n7xDxQgSGrF5viHkk",
+      "bloomSize": 917570,
+      "indexHash": "QmeGpUyjprSjrV1PvEXPEJdh9AU4wfvg3CUNFN3NkRbQsG",
+      "indexSize": 25727836
+    },
+    {
+      "range": "015945757-015948570",
+      "bloomHash": "QmPtW8mUr1P3mkh1b1MbPG8rJg7v9QdHgpHHYWjnhkw1pT",
+      "bloomSize": 1179722,
+      "indexHash": "QmPLLYGmMJVkr9u9JXQ7WtQrKfyy6fC4AC6TxxCG97Z4GS",
+      "indexSize": 27554824
+    },
+    {
+      "range": "015948571-015951687",
+      "bloomHash": "QmV3kFMkABazB4wUmfU9wQuPzDHp2pPmWt1N8iR9Zpr1uy",
+      "bloomSize": 917570,
+      "indexHash": "QmRhdGdWaYWW6tCrHRBXMWMx6bc6oKKJdD7NksDpWn5BDM",
+      "indexSize": 25705600
+    },
+    {
+      "range": "015951688-015954820",
+      "bloomHash": "Qme983wUBL1Q8WVi3vtkTZ5cCRxvrJTJuvp783jU78ub6G",
+      "bloomSize": 1048646,
+      "indexHash": "QmQC6YkKRdKy197h8kEbCcz8Fiynd6M8b1wHF5eskM6kG9",
+      "indexSize": 26905860
+    },
+    {
+      "range": "015954821-015958174",
+      "bloomHash": "QmfMxG5B8L7yg6GRu5S4NHxzTpAM7krZbke8e77Eg3wg8E",
+      "bloomSize": 1048646,
+      "indexHash": "QmXNpdnVVZcH85wLa4JYJw7tcZWuCoPJcsWr46XSG9Swdb",
+      "indexSize": 26496824
+    },
+    {
+      "range": "015958175-015961408",
+      "bloomHash": "Qmbcr29DhpkiY9DY11WEHfjoHpYYSMKzvNdW9p5smkucBT",
+      "bloomSize": 1048646,
+      "indexHash": "QmZzjxyqmwxFm6vYafDk1LRLzJSRF1BsYJrDDA9JB1AvQj",
+      "indexSize": 26782088
+    },
+    {
+      "range": "015961409-015964106",
+      "bloomHash": "QmZd6gbW4EwGpbeSboCxevMYSvyNFjwoniaN1By9UxDn1M",
+      "bloomSize": 917570,
+      "indexHash": "QmYJPbxcR18SzuApKfUcm8QrUgQ8kB5q1KKhpfBsEEGoPf",
+      "indexSize": 25754892
+    },
+    {
+      "range": "015964107-015966983",
+      "bloomHash": "QmZXePAYPy5fsRW29cXDy7G6MqRuJ292cNK2MUAosAmyBm",
+      "bloomSize": 917570,
+      "indexHash": "QmSMN2nuDqaEGifTd9m7P5MeswsUFtXV1C6uRmBBTFzUPA",
+      "indexSize": 25774192
+    },
+    {
+      "range": "015966984-015969798",
+      "bloomHash": "QmRHfd3ZjoX8yyKLHXh74AqSrCawdZ48ML8L41eBRqVCj5",
+      "bloomSize": 1048646,
+      "indexHash": "QmbrBfsdyBmyzWjxfWxZBFPzotVJUMe7kpeND6kxDr9VUn",
+      "indexSize": 26356712
+    },
+    {
+      "range": "015969799-015972475",
+      "bloomHash": "QmUT4zV8XVD4pTKsqE575z5u9d63ejBekxNXtFU7Y6f7Px",
+      "bloomSize": 917570,
+      "indexHash": "QmTseuLcencHdXN8sd1Xe4F5uyyHjbEJdo36teSne13smN",
+      "indexSize": 25764432
+    },
+    {
+      "range": "015972476-015975675",
+      "bloomHash": "Qmb1StbyabB6VJsnWTxSLurw5RtA7ddgo7YZErbYiThh3u",
+      "bloomSize": 1048646,
+      "indexHash": "QmPym6vwaJDNrrmrzruviEYAMen3RrMecT7xNFbw68tphn",
+      "indexSize": 26980120
+    },
+    {
+      "range": "015975676-015978553",
+      "bloomHash": "QmYq7L5Agy2JNcepJfhZjUnMLbg4JRZAAdWFe3XJKiZxYF",
+      "bloomSize": 1048646,
+      "indexHash": "QmZWWBFCpKnStszhgX6DE8K2VWgB3a8D57g8gg5VpLjfxV",
+      "indexSize": 25893072
+    },
+    {
+      "range": "015978554-015982086",
+      "bloomHash": "QmcvX6jZwogaauZRQd4k4A9eqzNq6g1Z1WuLM5MU2imBbq",
+      "bloomSize": 1048646,
+      "indexHash": "QmQWiaeGWCmrQbLCbF7mBuHLrRouqmJigsWWKu563WHWz4",
+      "indexSize": 27146800
+    },
+    {
+      "range": "015982087-015985061",
+      "bloomHash": "QmPFumkmcEszfXD4zanGWULqhqMYJgqpTovagEHVod2z1T",
+      "bloomSize": 1048646,
+      "indexHash": "QmamWYFs4nvXGV14fbuwpteyfbNu9M55CbrinLYisKrT6B",
+      "indexSize": 25856316
+    },
+    {
+      "range": "015985062-015988428",
+      "bloomHash": "QmURGjiVxAsBMKWpdUuR6B98gvj8QTaLHQLHbXF9YkYe41",
+      "bloomSize": 1048646,
+      "indexHash": "Qmancx9mBUE8E6kDENhYqroyju2JF8mHjfBTQXUyzgPsYp",
+      "indexSize": 26715600
+    },
+    {
+      "range": "015988429-015991412",
+      "bloomHash": "QmP8VeHKj9NA3XneHywz9QgUfKHBWVmKy4GJHAKEmMuRNk",
+      "bloomSize": 1048646,
+      "indexHash": "QmVhibgNDj6EkXBFACGkJweNKJCbdKe152jto2DKd2VvBT",
+      "indexSize": 26680196
+    },
+    {
+      "range": "015991413-015994711",
+      "bloomHash": "QmYpQTYSXJaa4DfPKhPQxU3PMVVFn8pFZVa1UXVqqhnwj4",
+      "bloomSize": 1048646,
+      "indexHash": "QmNWhL5vEVizWpwJHFAY2feGVYcuJncNPnvW3VH2wxmiuR",
+      "indexSize": 26331052
+    },
+    {
+      "range": "015994712-015998105",
+      "bloomHash": "QmUaZJWFwV5ta9yC4z6AsYHR9qJZ5Lzgz7dANk9tHzuou1",
+      "bloomSize": 1048646,
+      "indexHash": "QmdE7y6Y6CM8ixudJJe9Tw2f1z5hQteMCghuAheF9F4xhW",
+      "indexSize": 26941448
+    },
+    {
+      "range": "015998106-016000000",
+      "bloomHash": "Qmd5pgRCaPMRze6DeQgf5SGK2VhVrB3ybonCjeS7EcLstV",
+      "bloomSize": 655418,
+      "indexHash": "Qmd4xzYn8J8jidLhiu5MM6earkWYR1RPicjJrSt45gjUd9",
+      "indexSize": 15714004
+    },
+    {
+      "range": "016000001-016004024",
+      "bloomHash": "QmPZLBQrVmS6gkk7PJxC8H7jgSLitAxgLMHFcR1HqzPZew",
+      "bloomSize": 1179722,
+      "indexHash": "QmXGBppzrX6KT34Y4bAvrhr5nVnt8oJjWzco882GpMnoQr",
+      "indexSize": 27635116
+    },
+    {
+      "range": "016004025-016007448",
+      "bloomHash": "QmPmBRbdDaXx8dQJ3JZmkfjB4wYgPUpLeaCdhewggEjnDv",
+      "bloomSize": 1048646,
+      "indexHash": "QmPiv3yqi1oCvUTAhxLejLNQdpvXBfNXTUfJz6RKA8viwT",
+      "indexSize": 25819376
+    },
+    {
+      "range": "016007449-016011128",
+      "bloomHash": "QmVgUrS7j7NrwHAf6vykDKF1eh1KuPsTvB3XT5whYp9eee",
+      "bloomSize": 1048646,
+      "indexHash": "QmdU135y2kju4g47Uu5ga5q28AfWMBwuc5AFVk8WpiX3dh",
+      "indexSize": 27151308
+    },
+    {
+      "range": "016011129-016014362",
+      "bloomHash": "QmVsgvfti46vGZk8Hw5XAthSuwWqhEeYnC1TAG1kaMndkF",
+      "bloomSize": 917570,
+      "indexHash": "QmPcCH4pGEf7jCb4Gv5oGRenKdswBLL58QFVY3dcW2Ckbf",
+      "indexSize": 25163200
+    },
+    {
+      "range": "016014363-016017901",
+      "bloomHash": "QmYjPDxFXdZRcEHTMGTBQSi6Qknuu7b1vnw9BJ9i4RXGN7",
+      "bloomSize": 1048646,
+      "indexHash": "Qmcmhs5LtMoR85sKhSmCkdL65MBvLmABg3df1sStUDHHGX",
+      "indexSize": 26558852
+    },
+    {
+      "range": "016017902-016021004",
+      "bloomHash": "QmbGCHLExf8X2fhEBRNdYj8185V1RSK6jbQHhJFPD9y2Ej",
+      "bloomSize": 917570,
+      "indexHash": "QmSNFDdu2RwRupYNX1nthsotoAf32Cj8R6YNuSRXrfAEgn",
+      "indexSize": 25235708
+    },
+    {
+      "range": "016021005-016024437",
+      "bloomHash": "QmWCFnAWwy8pHCGwHozfJ7PcLDYoX2PnzUpsjiiqggEZan",
+      "bloomSize": 1179722,
+      "indexHash": "QmUFsNnfDS7U8MvjMfyBhUpmDCTcy9zEYTuLowEFWjAkun",
+      "indexSize": 27391840
+    },
+    {
+      "range": "016024438-016027563",
+      "bloomHash": "Qme8MfdGdojpWtHFNpESFDVjzuv4eJuLnbYftutXDR39qz",
+      "bloomSize": 917570,
+      "indexHash": "QmRLdYbfJfWdHC7h6PqPfKi9toA3vLHpxBSxEtPipDeRfF",
+      "indexSize": 25473212
+    },
+    {
+      "range": "016027564-016030814",
+      "bloomHash": "QmXGzeZq8oihkuNL2ceLTqBayzDiW5qo17351hmG8Tm2iH",
+      "bloomSize": 1179722,
+      "indexHash": "QmfM1tbyT8ttvvuWcmC2cirBtA4sikrZXKdrZZhsdke6km",
+      "indexSize": 28245204
+    },
+    {
+      "range": "016030815-016034065",
+      "bloomHash": "QmV8K6XCFTttHDPHRWd2dUTCxzcWVHCkXXCTkFBbGJQh28",
+      "bloomSize": 1179722,
+      "indexHash": "QmPXLJ4TigPFKRixktBimdkEAMHBGna6sRTsLp5tbPmPRW",
+      "indexSize": 28119300
+    },
+    {
+      "range": "016034066-016037114",
+      "bloomHash": "QmQApsMeg5DzXPzuPQc46L4uu5NpURsQUdfvgrGZCwyvYV",
+      "bloomSize": 1441874,
+      "indexHash": "QmWkWw9RHxHHW4DUv8ce4z61BfAgja4z8rBYbiTsPugAd5",
+      "indexSize": 30221064
     }
   ]
 }
