--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -16,7 +16,7 @@ jobs:
           sudo apt-get update 
           sudo apt-get upgrade
           sudo apt-get install build-essential git cmake
-          sudo apt-get install python tree jq
+          sudo apt-get install python3 tree jq
           sudo apt-get install libcurl3-dev clang-format
       - name: Run basic golang unit tests
         run: |
