Updating manifest for sepolia

--- a/src/other/install/per-chain/sepolia/manifest.json
+++ b/src/other/install/per-chain/sepolia/manifest.json
@@ -471,6 +471,139 @@
       "bloomSize": 131114,
       "indexHash": "QmNfTsG8Z8tjZoxcri5AFagxYwTqpC6nm7cJWUNxZhScTy",
       "indexSize": 2092868
+    },
+    {
+      "range": "002353376-002372869",
+      "bloomHash": "QmXi9QtuCgMxuwu8P1bS2c5MqST83FdPV94iVN8VUxjNm6",
+      "bloomSize": 131114,
+      "indexHash": "QmYRzaA56pqFUTC6NBzNiyV7r2oCodquhdgYkzSfXpory4",
+      "indexSize": 1924704
+    },
+    {
+      "range": "002372870-002387465",
+      "bloomHash": "QmRXD6yYESP74tcSieHHDjyDdmLGX1D3MY5SeRmZsmuowr",
+      "bloomSize": 131114,
+      "indexHash": "QmXRsT41JT5ubLCY6i98dRto1A1gD2hi2f29uKhY7QqaCy",
+      "indexSize": 2340736
+    },
+    {
+      "range": "002387466-002392572",
+      "bloomHash": "Qmb2USi6uUxxLsfUqjhi2BBtUnB6ks5FNfXoGB6Wrt7ifM",
+      "bloomSize": 393266,
+      "indexHash": "QmRw2i5fnMkSzeti24JM95PuZH9EeLPRnXVGHXeKQax9E3",
+      "indexSize": 5239892
+    },
+    {
+      "range": "002392573-002396201",
+      "bloomHash": "QmRexNMiewazMTRXRqFvmnDDRRcHYpiU41s98nv3Wc2bLH",
+      "bloomSize": 524342,
+      "indexHash": "QmVJGmS3X4Cw1hrnpVQ8xwA4c1ioSzKhXAsNZsb3eKkr8V",
+      "indexSize": 6286048
+    },
+    {
+      "range": "002396202-002396652",
+      "bloomHash": "QmTXYQtRe66UAN47DxcdL7ZoYYVsKDZkzW9Z4ACfRLUM5b",
+      "bloomSize": 524342,
+      "indexHash": "QmUJFSWuXDGys7LRQnbLzVBjUBoaBhYpWEw3asfkLyj3k7",
+      "indexSize": 7108740
+    },
+    {
+      "range": "002396653-002400000",
+      "bloomHash": "QmZohcm3o6RrhMWBDqYm9nVMzuiZPAgDgJrEsiSsGHCPGz",
+      "bloomSize": 262190,
+      "indexHash": "QmU9yKK2pAfuBSqGXc4L2iaQTiYF2yiri6K7Kj6UKSBFa8",
+      "indexSize": 3442056
+    },
+    {
+      "range": "002400001-002400959",
+      "bloomHash": "QmPpxJ81PkSzCj1Y9haAq6Que6ESFz3VCoQaBtXBAxaHGk",
+      "bloomSize": 524342,
+      "indexHash": "QmaBGWhcMa7SGbwUNwAkHeKM5ca49DBy1oW6BkSJDB1ZBH",
+      "indexSize": 6971120
+    },
+    {
+      "range": "002400960-002401292",
+      "bloomHash": "Qmbq6sBbwgPQ3hEMWuGF3CXm1qpufkVA6AhrgXsDcgEsMA",
+      "bloomSize": 524342,
+      "indexHash": "QmNW26QZC32TQVTjrvGWySjcki2vo2AswCqz5DxNcgGzHw",
+      "indexSize": 7136840
+    },
+    {
+      "range": "002401293-002401632",
+      "bloomHash": "QmRu3z1Gxnf4zW9KiminFpeNhrmtB2ZFkVC9r43Fz4uFNu",
+      "bloomSize": 524342,
+      "indexHash": "QmYTp1MB6BHWxe2NqHBsLbWxQ28nND1WChoy5MVTYRnHWm",
+      "indexSize": 7145700
+    },
+    {
+      "range": "002401633-002402965",
+      "bloomHash": "QmbKfgnfPo2g75GCwdPvFj3vpgsvTvzELcbDrtRoFCM7BS",
+      "bloomSize": 524342,
+      "indexHash": "QmWRu271MXPe9MCdgRqyLuPn1XM3W2t9xzT2NhfjDdJ55Y",
+      "indexSize": 6901920
+    },
+    {
+      "range": "002402966-002403565",
+      "bloomHash": "QmSZGHN4F8hx4E2EzagLuW8GBQeLf6JQKQ7tqGCMNPgUKs",
+      "bloomSize": 524342,
+      "indexHash": "Qmaib6Rr8rcAw1DtiQdJvRT6WafxYCBDbHkfKjVUfSYK27",
+      "indexSize": 7097864
+    },
+    {
+      "range": "002403566-002404360",
+      "bloomHash": "QmUuVP8hKqgTin84o3WANG39qcvj2XN3kNyWGyAvwdbKms",
+      "bloomSize": 524342,
+      "indexHash": "QmfPSnvLd6UuLVc7UQHiD9zghkszGEV5GUkZ4zLHPo1vEj",
+      "indexSize": 7036388
+    },
+    {
+      "range": "002404361-002406600",
+      "bloomHash": "QmaaH43xaGiufpHxTr4E4etvjJiNUUAKSo4vbCTbfNSktS",
+      "bloomSize": 524342,
+      "indexHash": "QmVTh7XHf1qi5AivAbgCooJ5pvBGWqENrxXMLFMdprroYu",
+      "indexSize": 6652124
+    },
+    {
+      "range": "002406601-002409688",
+      "bloomHash": "QmaqnbBCSL5WZXQGDAR5QZVjsRFRB55azFTaSgvUEmDmKg",
+      "bloomSize": 524342,
+      "indexHash": "QmWeboZqpB5tMSoD4bscvC6bzWKW9u7tdcebZzUFZASRJ5",
+      "indexSize": 6689336
+    },
+    {
+      "range": "002409689-002413973",
+      "bloomHash": "QmZf97QqFMgJR3PNSDaZhzw9iuH1pYbuydTEPNHuy1TNFG",
+      "bloomSize": 524342,
+      "indexHash": "QmfUeXg9BsdFSgWoSQHXseGTTzio2jSGmAZ1Jyqws3KMJ3",
+      "indexSize": 6298476
+    },
+    {
+      "range": "002413974-002434541",
+      "bloomHash": "QmXo31XgoZhpe1ADUPcoACHp17pW27Rc7Bmq4543sSnChB",
+      "bloomSize": 131114,
+      "indexHash": "Qmf8VC1YUMpLJX19FYq2mxfFpHUtzqBmkWwYjL1w3Wc7bP",
+      "indexSize": 2269064
+    },
+    {
+      "range": "002434542-002450227",
+      "bloomHash": "QmbUZ5zk3KjwK6EnGCt96dVuYdTbYJ5o6k8bHN53bVVcVv",
+      "bloomSize": 262190,
+      "indexHash": "QmZgvvBSynLTmmu52EfwcFokRRHSsCUN8w9dLa53ef5wM4",
+      "indexSize": 3508944
+    },
+    {
+      "range": "002450228-002465269",
+      "bloomHash": "Qmc1voaLdSaKLR2jWsxF8NGxNkHr1rgGzg9yHkJVJafeSm",
+      "bloomSize": 131114,
+      "indexHash": "QmaJfTUqsqT8AncMgeN7GdJBBWAB1nGW4bCmdqqUPMXXus",
+      "indexSize": 1969048
+    },
+    {
+      "range": "002465270-002472301",
+      "bloomHash": "QmdLPdMTGpqr2wzFmKdu12V1vsLUE5sH8jpkrQrquHh2Xf",
+      "bloomSize": 131114,
+      "indexHash": "QmS4AGEYsq8w5GZDukt884AJU4bH2jMBDvZBrgmCXN8GZi",
+      "indexSize": 1799988
     }
   ]
 }
