--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -22835,6 +22835,391 @@
       "bloomSize": 1441874,
       "indexHash": "QmWkWw9RHxHHW4DUv8ce4z61BfAgja4z8rBYbiTsPugAd5",
       "indexSize": 30221064
+    },
+    {
+      "range": "016037115-016040659",
+      "bloomHash": "QmW6mMBSRg2XFGcZfPH5EXbBTQzDjHsKHweNjJgfKwZ3wh",
+      "bloomSize": 1179722,
+      "indexHash": "QmXTDoDzCTsEJXSASgN3N94tFCpBPjZMrweRRDwrpWMqCj",
+      "indexSize": 28224040
+    },
+    {
+      "range": "016040660-016043870",
+      "bloomHash": "Qma8ybK1mA9tUc9h8ebuf9Wp1JRNFm9VibY5ACoB6c8Egg",
+      "bloomSize": 1441874,
+      "indexHash": "QmcE23B1FnJJfc2jYtkjmbmn4DsCyfrtbF6SST7HTSB2mY",
+      "indexSize": 30257504
+    },
+    {
+      "range": "016043871-016047554",
+      "bloomHash": "Qmegmk2DJwRuEwQ6uStZqBSuWWm5jzKHbbtxGZp9cMwk23",
+      "bloomSize": 1310798,
+      "indexHash": "QmSsFrSAtAV8CqtCxwwKWj2WBgSf2PYPQ6jxSCjswTbS4Q",
+      "indexSize": 28765024
+    },
+    {
+      "range": "016047555-016050738",
+      "bloomHash": "QmYzvkww5WDo7LqqqGrthct3ms4q6op4Yu1yfzcQYAgsgG",
+      "bloomSize": 1179722,
+      "indexHash": "Qmc8H2VLcjVMTaP6qNApebuXuVejyft3QPpmQQhrFMi83u",
+      "indexSize": 27904812
+    },
+    {
+      "range": "016050739-016054395",
+      "bloomHash": "QmP7fzYGJvKMarWxFjrVc6zZFFp61HRbTWad4sKZZanX4q",
+      "bloomSize": 1441874,
+      "indexHash": "QmQgxVQ6JUXpYYxKhvoGP2tug72NjzRAjcQjXg6yZsmjvB",
+      "indexSize": 30037584
+    },
+    {
+      "range": "016054396-016057952",
+      "bloomHash": "QmNYKsqfW7S4oBUFqGdHg9uNsFgddDxDnmZz4GFwrdZKrV",
+      "bloomSize": 1048646,
+      "indexHash": "QmP8eFMWc5ZbL5jagBvogUjgpVTRCVcLv68rXDEzFF2iUN",
+      "indexSize": 26433708
+    },
+    {
+      "range": "016057953-016061947",
+      "bloomHash": "Qma6bvg17soDog98RAuoctTPiCsxSEETnFcbRRdb8rKJtc",
+      "bloomSize": 1310798,
+      "indexHash": "QmaKd6pW1R5P712QNCP5LiZZEqrCcHJsojdPifSLYk5bKs",
+      "indexSize": 29419544
+    },
+    {
+      "range": "016061948-016065354",
+      "bloomHash": "QmSrKn7XF1dwhTjcojQ6oX9Q3chqTkPn5CX4nS7FMtjhYz",
+      "bloomSize": 1048646,
+      "indexHash": "QmYwZtfogdB2dQ6Rg31BjVHocFfHxY4UizE34bUfvpoDuR",
+      "indexSize": 25808860
+    },
+    {
+      "range": "016065355-016068687",
+      "bloomHash": "QmUXWYxaMoBHvfR9xrhxKhYXucwpWvtWmmGFGwWngSMyFN",
+      "bloomSize": 1441874,
+      "indexHash": "QmdBcwQqi3mEMPaYFujahJiv8Nk6dkAkaWTvE6Q71uq6gj",
+      "indexSize": 30560076
+    },
+    {
+      "range": "016068688-016071808",
+      "bloomHash": "QmS5ou5i5uWCYYnMzt4ECCSAJGsguvm4wWbkDyKjwwPrLm",
+      "bloomSize": 917570,
+      "indexHash": "QmRwcAmutJfkGHfbUaJzpt46t4JMr5x32Hi5vEVbSCbD89",
+      "indexSize": 25260420
+    },
+    {
+      "range": "016071809-016075190",
+      "bloomHash": "QmVkhznJYpdqPonZmdwY7dBmTik9tuQ12Hfi7csJYErtUF",
+      "bloomSize": 1179722,
+      "indexHash": "QmfXEYpUD6WykZNaTjwJwRZK9zTtuY1tMJe9b6PTSNpDaa",
+      "indexSize": 28164716
+    },
+    {
+      "range": "016075191-016078335",
+      "bloomHash": "QmUq1pidQxWBng9rtLs5GnEksRuVt5CXcZgA3ka779BER2",
+      "bloomSize": 1048646,
+      "indexHash": "QmWgcznbZGpRMFJQ1gFyHpVVkCUgA6Eiq8Roosdwgw3RVq",
+      "indexSize": 25884936
+    },
+    {
+      "range": "016078336-016081673",
+      "bloomHash": "QmamhJZaBoNS7U4SVUkSvpFikwzqvbZv5FvH1umbsQrTmi",
+      "bloomSize": 1179722,
+      "indexHash": "QmTFM43xy2UaTmhyaywL2fXubCaQLSnyq6TvasoF3zMLYt",
+      "indexSize": 27300784
+    },
+    {
+      "range": "016081674-016084866",
+      "bloomHash": "QmXwepPQ8xYjtadaXtod1Jc4vFsmgvZscYt5YXd89F3W1C",
+      "bloomSize": 1048646,
+      "indexHash": "QmdqYawBhCyRmVUEM74JrN5qv9gZPWBU7QcqJ6t2wFcmGp",
+      "indexSize": 26128272
+    },
+    {
+      "range": "016084867-016088210",
+      "bloomHash": "QmXjFx4hjL8f1BH97YD6MHuoYWcPcgF626B2YhRuT2sWwS",
+      "bloomSize": 1048646,
+      "indexHash": "QmYFMftnuTkMbRsNyFrC7kcH5M3Kjcp6rKSdYR3GqgPAfH",
+      "indexSize": 26085480
+    },
+    {
+      "range": "016088211-016091452",
+      "bloomHash": "QmcH1qo8R3oLff7jKxSWnuMqUMyQqvRf9CZjuWQYYjzRbn",
+      "bloomSize": 1179722,
+      "indexHash": "QmTB8EbyeSsLx7gvuqzKdMXam2dSWgY7mQPdG3WHBM8g26",
+      "indexSize": 27453256
+    },
+    {
+      "range": "016091453-016094908",
+      "bloomHash": "QmbGXjtVVJebpuzynNMETQeHVkL2zegv1FATGqCQ8Myjok",
+      "bloomSize": 1048646,
+      "indexHash": "QmT3ddNE57UiH8bUGA4EsfgP8KabjfKewaWJ1dtbRqXCbP",
+      "indexSize": 26642336
+    },
+    {
+      "range": "016094909-016098224",
+      "bloomHash": "QmVcomxvtCEs48WDw8rh4AimgpScETLFQwHHwmpAhczryd",
+      "bloomSize": 1179722,
+      "indexHash": "QmSqAKQD6S32rBVYY4u916yctMcTNtGDtV2EQZB9Vr34uW",
+      "indexSize": 27657724
+    },
+    {
+      "range": "016098225-016100000",
+      "bloomHash": "QmSwJQgrcYPB8zv9Qi6D9WcPhgpdz4pMeBEddcW4BGc2Fd",
+      "bloomSize": 655418,
+      "indexHash": "QmfYHMk8P9HVy7kzjFeYzr9dGFiWXLjY3G2HE3jqKUV2BH",
+      "indexSize": 15239356
+    },
+    {
+      "range": "016100001-016103647",
+      "bloomHash": "Qmas5wND3CvYSmjb8qqXhwP4vmCmk4HktLgzyNgwcrM7fw",
+      "bloomSize": 1310798,
+      "indexHash": "QmdccQQr4DgAJ2bDMMENxayyGJkUpV7SK5CcTGT6Dj3k7a",
+      "indexSize": 28702932
+    },
+    {
+      "range": "016103648-016107051",
+      "bloomHash": "QmY5RJF2ZtXWW3iaviCH76PXPPYHFPVsRDqsWPpijR6cNt",
+      "bloomSize": 1179722,
+      "indexHash": "QmcP6F4pzNeddmw6Lob4fNZoP3WCQpz3ghbupmC1fPfe1T",
+      "indexSize": 27259244
+    },
+    {
+      "range": "016107052-016110906",
+      "bloomHash": "QmR6Pq2M7Q2w9iXEz3vPTpTexC2CFjmNxgqnRH1NRhcVFt",
+      "bloomSize": 1310798,
+      "indexHash": "QmcSnUEQ66dSMJ3wpft9PQi6QhVAhF4ZahUvnjFjdWaNtE",
+      "indexSize": 29562332
+    },
+    {
+      "range": "016110907-016114217",
+      "bloomHash": "QmZKFsca8oTA1oJbEh7AnzvJvVrFwhAeQ5zB6mnkSpWMDb",
+      "bloomSize": 1048646,
+      "indexHash": "QmW64YgBMAU2e7VFQpfh2eLkQZogXEC8VDtaMW1C9Sif7E",
+      "indexSize": 27162052
+    },
+    {
+      "range": "016114218-016117753",
+      "bloomHash": "QmXpanHZ34eBpRt4GSoidLd46GLxp1anayNWWAKY4Q86SV",
+      "bloomSize": 1179722,
+      "indexHash": "QmNbEXQsKYSxVTdxPdeHi1TnS3bQxq4RozcZdT7fonu8z7",
+      "indexSize": 28010820
+    },
+    {
+      "range": "016117754-016120900",
+      "bloomHash": "QmXgiT2x8g5j953PVtKKM72cwS7JbeL17wNmE7AZcBc5Cz",
+      "bloomSize": 1048646,
+      "indexHash": "QmZWAJNuyFRxss1DNJpLqjy7fkRBTbrQMD7dFhzsQcoNRD",
+      "indexSize": 26182988
+    },
+    {
+      "range": "016120901-016124431",
+      "bloomHash": "QmeKHfVR3VBj8tFc1CqghENpVvTyg87rjVBko16ZfVCNAi",
+      "bloomSize": 1179722,
+      "indexHash": "QmYhq47iPPttUnzjEVK8cFpifTxFhn617PDsEaR3xbtQdW",
+      "indexSize": 27272976
+    },
+    {
+      "range": "016124432-016127629",
+      "bloomHash": "Qmapcj8FdmGMc7kaKNNGSkfmw3pdVqa8r49DfieAQD4foh",
+      "bloomSize": 1048646,
+      "indexHash": "QmWcpjsAkngtVN8bSXfs3ZxMo1HwVWEYpQzZfM14BALDNj",
+      "indexSize": 26760160
+    },
+    {
+      "range": "016127630-016130967",
+      "bloomHash": "QmVuXvpYyMfXBzjyr5p49E2xQHwUmrzL7JywdW67jTXhpw",
+      "bloomSize": 1048646,
+      "indexHash": "QmUwd1JbeoREiYaqZADDAEHr8xE2BaBa34wDgBYWv4eTEe",
+      "indexSize": 26320084
+    },
+    {
+      "range": "016130968-016134308",
+      "bloomHash": "QmSYdCNyGswhtY7yW19RYqsxpeDWuZPRXkJi7MviGoSyJv",
+      "bloomSize": 1179722,
+      "indexHash": "QmXL3Skbz9ro1wGM8pvT1jsLDupLv4ZwaZs8ir25NUbhFY",
+      "indexSize": 27250156
+    },
+    {
+      "range": "016134309-016137774",
+      "bloomHash": "QmYVR4yqDKHzuxAKTU4VHFE7HgwM3SFYSoNJbYCtVbwbUM",
+      "bloomSize": 1048646,
+      "indexHash": "QmdRnMuESoUa2f79fEvVE5mgMgEtGBdhs4PVW8rtX4qYgF",
+      "indexSize": 26556176
+    },
+    {
+      "range": "016137775-016141372",
+      "bloomHash": "QmPaz9GGXLMfcCqnBkDmaVPxqPmj7HczVPMgkC3sYojQTZ",
+      "bloomSize": 1179722,
+      "indexHash": "QmW6idC3xnEYs3FAkX5uNAqBwacNnqFhP2B8W3xL3hLybj",
+      "indexSize": 28060888
+    },
+    {
+      "range": "016141373-016144841",
+      "bloomHash": "QmTxS2Bt6AvioEY4xrhPXBf3ovFsUqqmCCdTEobSZ1gmZk",
+      "bloomSize": 1048646,
+      "indexHash": "QmWR7SQa6FvAdYtfjsLp9AP2cgXAxtGcV1S7P3711QvjqG",
+      "indexSize": 26903464
+    },
+    {
+      "range": "016144842-016147149",
+      "bloomHash": "QmdaFuiW83pH81jQ5FL7XLmWu5UgZwkqoAU7CSb1y2k5rK",
+      "bloomSize": 1966178,
+      "indexHash": "QmbHEWT6Suo88JTwyk9SfYdRjTA3QwwfezBNhA9ZmrRvf6",
+      "indexSize": 35954112
+    },
+    {
+      "range": "016147150-016149339",
+      "bloomHash": "QmaNPxejEje9kFDcJYZDPynzLQtqci1f4BeGxxGmbAdLYu",
+      "bloomSize": 1704026,
+      "indexHash": "Qmck1v8Wb6ywBXfEtmUic1hB9rU8HW2eorgpXdNb9mTJwV",
+      "indexSize": 33070900
+    },
+    {
+      "range": "016149340-016152389",
+      "bloomHash": "QmdZ58C8JQbyaxZC2XRq7ZYww7dW6zPgW97E6aTjtp66oS",
+      "bloomSize": 1572950,
+      "indexHash": "QmYTSyWQTnnVV6hww8XGKgwwWSzuFsjWCdEVQjr9VQMEHm",
+      "indexSize": 31856744
+    },
+    {
+      "range": "016152390-016155559",
+      "bloomHash": "Qmf5ZSghqPyaX4ck1eT2nXzPkbVzDjhD3EGpzz24eXiFDR",
+      "bloomSize": 1441874,
+      "indexHash": "QmTBD5QQkRwQF79GBMK4fGkVhN7jT5PdjKe3ZBGQ9eTjNp",
+      "indexSize": 30629620
+    },
+    {
+      "range": "016155560-016159160",
+      "bloomHash": "QmVUdTnXQu1SEuQt14ybrzHktwsqvftTXdxfsnmhkiYRyq",
+      "bloomSize": 1179722,
+      "indexHash": "QmRVyS33ybMP8egb2dQ4NNjAGTm6NEHhxK24KvZi2Z1k3M",
+      "indexSize": 27621044
+    },
+    {
+      "range": "016159161-016162525",
+      "bloomHash": "QmNf5V5TrkMdau44ERJVdfWvRHg5jdv946PekQAPRCSJP6",
+      "bloomSize": 1441874,
+      "indexHash": "QmextqVjMY3iYgyE6emTEGxiZMh5k8ij5hrcMoqMNrSVvz",
+      "indexSize": 31190456
+    },
+    {
+      "range": "016162526-016165862",
+      "bloomHash": "QmNYTHSNd6bQrgJF3p4PRzxAbC6NHQ4uc8hjn3u3DSbPaK",
+      "bloomSize": 1048646,
+      "indexHash": "QmbRfNaXAyPpfKG1F1haVNx4f5JcZm4NKdX2iHBZJArL2H",
+      "indexSize": 26793296
+    },
+    {
+      "range": "016165863-016168928",
+      "bloomHash": "QmTKnGwfiJf99nbArBjbZsjbBzogV5iUtD9aMeWPaoQNtK",
+      "bloomSize": 1572950,
+      "indexHash": "QmUWSYjLGGYBzBBBxDpQs5uncGZHczo6bC7J8Cvg8Yt7CJ",
+      "indexSize": 31595440
+    },
+    {
+      "range": "016168929-016171949",
+      "bloomHash": "Qme8pShYQYmySdEqvShK1zDgqzSupWeDpYEdjCLmAgS72p",
+      "bloomSize": 917570,
+      "indexHash": "QmPhD9vaMQ4zxn8Qnxj8a9mSYAMxk4u4pxbPu65eP9ctT4",
+      "indexSize": 25326964
+    },
+    {
+      "range": "016171950-016175122",
+      "bloomHash": "QmexZqiBFyVZQQLLAPCnUSepaCBkyBXrBf8w9poFix9ogF",
+      "bloomSize": 1048646,
+      "indexHash": "QmZjwd2LhiqHw4QsPiytXZXroH5gJtgT9pd6FWpauMCreh",
+      "indexSize": 27051324
+    },
+    {
+      "range": "016175123-016177967",
+      "bloomHash": "QmQ8cMfLCDSbNGWG3bAo8kGqLAnjDDkfsSAjHZgCYBt6dB",
+      "bloomSize": 1048646,
+      "indexHash": "QmNkG6WTFqVKCd8EwFPeuD4VgRRTHEGFAG6XDxKNFX9iun",
+      "indexSize": 26040412
+    },
+    {
+      "range": "016177968-016181074",
+      "bloomHash": "QmcBbRBVPtEVrhCyWgon9HCnMZqT3ThN6BURpmz8k8d237",
+      "bloomSize": 1179722,
+      "indexHash": "QmUgEfgNsVAFo9HuiHgVVjfA3KZV4XZmvWFvUaYH4ZFGKJ",
+      "indexSize": 27762684
+    },
+    {
+      "range": "016181075-016184247",
+      "bloomHash": "QmRhF9VFvPuVV618zcziWTbdWCyW6APamaXVD7nVxyVcWu",
+      "bloomSize": 1179722,
+      "indexHash": "QmRPDL7VLWEiE8gCM6N5SSTB34xC2j8u1tu5rDCDkpzqbG",
+      "indexSize": 27483348
+    },
+    {
+      "range": "016184248-016187297",
+      "bloomHash": "QmRjzSx3UnBAKfVRnL3sR4CgPuoajDU4syJeSdiNX9Niib",
+      "bloomSize": 1048646,
+      "indexHash": "QmdJbdAotzUB8CmbrP9wnuHk3hywqj1Tf1B4zMGthvGVbK",
+      "indexSize": 26663972
+    },
+    {
+      "range": "016187298-016190526",
+      "bloomHash": "QmSBGq2FAZ6W264cvyNMtzzY9GT1ZERW9zbkf1bnwfpjxK",
+      "bloomSize": 1179722,
+      "indexHash": "QmRxBbkCvogpior9b7DDWVwdC875FZ5Ukpk1GcemA2mdQj",
+      "indexSize": 28373016
+    },
+    {
+      "range": "016190527-016193464",
+      "bloomHash": "QmRrRNNn9ke4owqNPCcx46Ky2GdeywqSM21YPVQQ5d6Fsa",
+      "bloomSize": 917570,
+      "indexHash": "QmcdWyaWZnvvPJZAfZrkdgpq6Xcp8dCY84DR8dT6mQr1L1",
+      "indexSize": 25496512
+    },
+    {
+      "range": "016193465-016196689",
+      "bloomHash": "QmQHbfxN7LS6cvsr2m7PqkJBoJXvXg5Cea811wDxJW5fca",
+      "bloomSize": 1048646,
+      "indexHash": "QmYUuoDV85s5NoX9vNRDLpTiYULemMCiWPfc7SgNuQYM3h",
+      "indexSize": 26921680
+    },
+    {
+      "range": "016196690-016199551",
+      "bloomHash": "QmZttWSkwg8qDyLD8oHqFYWZULkiVxuR3qHjqQCygMXXRc",
+      "bloomSize": 1048646,
+      "indexHash": "QmXfe1cUb5pPrk1NdVMKKbqej9Lgvp3xhz29utkFFobTN2",
+      "indexSize": 26265524
+    },
+    {
+      "range": "016199552-016200000",
+      "bloomHash": "QmWPFEZqzMpgWXrcgDThiWUuTCPRnehrM7KPGzdBaYGu7y",
+      "bloomSize": 262190,
+      "indexHash": "QmPfiWxMgXzoRhLpxsUK2a2FNw37NCS8HhXB94UpcStoXU",
+      "indexSize": 4641700
+    },
+    {
+      "range": "016200001-016203056",
+      "bloomHash": "QmPYAx6hVdtmEwuoU3pg7LsC4uUcCdPbPF8sMPMFivtgfD",
+      "bloomSize": 1048646,
+      "indexHash": "QmeHKMMpq1fMTp2PpESnjkpAUPLMggaLD8UcKZMB1haiCJ",
+      "indexSize": 26532816
+    },
+    {
+      "range": "016203057-016206353",
+      "bloomHash": "QmXPJ45yLdP9cm85BeY86DouExfa1H7X3AGaPQsnWnGWAJ",
+      "bloomSize": 1048646,
+      "indexHash": "Qmd7xsZJS1C5AwDjT8XNB5sYM3RuoT9aYTseSo4YTb9o7q",
+      "indexSize": 26715160
+    },
+    {
+      "range": "016206354-016209710",
+      "bloomHash": "QmWbmR1orxFEWAUBYS4pQZLzrH2ScVWcLgfrAFy6t8jmTW",
+      "bloomSize": 917570,
+      "indexHash": "QmS3QDa8WE7Tu1Kz4vbAFb6MXYjK5TFp7QbqWSzXeNEDDH",
+      "indexSize": 25582984
+    },
+    {
+      "range": "016209711-016213303",
+      "bloomHash": "QmQyyUCuewaXS6nCuazYRZZnmLLSBvq58EbYT8fjLiS8wo",
+      "bloomSize": 1179722,
+      "indexHash": "QmNmhXXoRRy8BVZrbDZQbRZbXL5h48L4xqmf2s1T4ZEUib",
+      "indexSize": 27349680
     }
   ]
 }
