Updates README, manifests, and names

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -23220,6 +23220,258 @@
       "bloomSize": 1179722,
       "indexHash": "QmNmhXXoRRy8BVZrbDZQbRZbXL5h48L4xqmf2s1T4ZEUib",
       "indexSize": 27349680
+    },
+    {
+      "range": "016213304-016216865",
+      "bloomHash": "QmQR2QxgkwGij2a6iVKpyfvsAz8Sdu2YhA5JmBneV9Qaku",
+      "bloomSize": 1048646,
+      "indexHash": "QmWAjScTbSkPFLAtSkm9thSxjZitYffUDyRKWXpvRg87xz",
+      "indexSize": 27198652
+    },
+    {
+      "range": "016216866-016220285",
+      "bloomHash": "QmZa3HeMHdwz8sSS271pZfNz8TTXHiGyqHnSMPBN5G8xPT",
+      "bloomSize": 1048646,
+      "indexHash": "QmSUttG4nTpDKb5miJYsbEtZjJ6MSLaPu2s4j5d8CbNAcM",
+      "indexSize": 27081656
+    },
+    {
+      "range": "016220286-016223482",
+      "bloomHash": "QmatkcAtDjN99a9ZeamtxxDHNmc7Hmp1UxrXFZrg6ZgiXo",
+      "bloomSize": 917570,
+      "indexHash": "QmciV1bK8tS9giPq3Qibx1yiaz6AZKkzK43LWvZZV7U26Y",
+      "indexSize": 25028816
+    },
+    {
+      "range": "016223483-016226931",
+      "bloomHash": "QmPnqHW6p2M8jD7N9QPfffs8uBMVAhG8BvP3UBqcnf3m8F",
+      "bloomSize": 1048646,
+      "indexHash": "QmWgtrzC2ZLmzddvikaNevG4ZZq8z5ycUWT52LZz1jTBwh",
+      "indexSize": 26490708
+    },
+    {
+      "range": "016226932-016230175",
+      "bloomHash": "QmR6Rp3rF64EmtMvn8AMePF5W1d5JnBFAGnUjkbFKTLRSG",
+      "bloomSize": 917570,
+      "indexHash": "QmXunZPeqExgknVmQsFa2Md7gSycZ499ub5jqwaq3ja8Jm",
+      "indexSize": 25462392
+    },
+    {
+      "range": "016230176-016233528",
+      "bloomHash": "QmZDcAnoMWHXB1YSyftXNxYLULxiVujvcHrCWyvYHp4sQ1",
+      "bloomSize": 1179722,
+      "indexHash": "QmYrumhGH7BTbXssyGno5pzkHH48eLBLy5SKuiS6SQqowK",
+      "indexSize": 28082960
+    },
+    {
+      "range": "016233529-016236666",
+      "bloomHash": "QmPSXPNVDSWytKbYaesaHJxJgieJ4xqsHQZUQEME9SLJfg",
+      "bloomSize": 917570,
+      "indexHash": "Qmaq2Pp5bPUuJhhQqX55sue8Vr262jXXYXprZaKtjZdgWg",
+      "indexSize": 25400768
+    },
+    {
+      "range": "016236667-016240324",
+      "bloomHash": "QmPs2KdG2mW9tVFHTpE7qS4YKLp3ELyYxsFYedXcB17qXs",
+      "bloomSize": 1179722,
+      "indexHash": "QmSqkg8qeeaC6qEaxqpbmjasi4WoVrbdXyAD6cFnWztbv4",
+      "indexSize": 27992800
+    },
+    {
+      "range": "016240325-016243332",
+      "bloomHash": "QmSJYKNSWWpf8maRSEGztHLpdQ8Sh8sfpGpaBxwgk9fExo",
+      "bloomSize": 917570,
+      "indexHash": "QmZMLw9pgHQVr5rTsGaDTxnttGtnh234KFr8BoHmtL1GsT",
+      "indexSize": 25600628
+    },
+    {
+      "range": "016243333-016246682",
+      "bloomHash": "Qmdh9BhEQiw6rdxK7jcp9uJG5tapHSmJSTEFjTvJRirHeW",
+      "bloomSize": 1048646,
+      "indexHash": "QmRPYUt5sidLYE7j74kzAQKmuLfT94B5kVcTXvhFxeYtG9",
+      "indexSize": 26913904
+    },
+    {
+      "range": "016246683-016249816",
+      "bloomHash": "QmaFtfDZdou3a9X5AJF8UuEgk4ta7APS2DpijzSabqCe3W",
+      "bloomSize": 1048646,
+      "indexHash": "QmUe8Rm4nmUXnEjVdW4SCZsjSsNetRLrZGd7dmNUN2h9F2",
+      "indexSize": 26104340
+    },
+    {
+      "range": "016249817-016253507",
+      "bloomHash": "QmeEgwtvbWaJVcqgW33osDDUqFiCPxDRNJFzbw9k9QHbko",
+      "bloomSize": 1179722,
+      "indexHash": "QmPTJzWwH6HdtVdGSyqzynLhb6Y3reBVFdFGcZH5Nyj6Qh",
+      "indexSize": 27627988
+    },
+    {
+      "range": "016253508-016257072",
+      "bloomHash": "QmaW6DpmmsXzJ8JqJVbg8j4E72UCKceoz8tMQEDJ2VRDBs",
+      "bloomSize": 1179722,
+      "indexHash": "QmefvJnjoKMDd8JbkirjBiFeoZZxQmJnR2ZymgJ2nqEjg5",
+      "indexSize": 27605608
+    },
+    {
+      "range": "016257073-016261182",
+      "bloomHash": "QmUaGk3E1gZGdpD4ynfe4cYraXJPozGnTPTvwzs7RJ1K1k",
+      "bloomSize": 1310798,
+      "indexHash": "QmRxbUQ7vYHTemtu3NrKoWDgak18ovfaXjG963rAa5o7CK",
+      "indexSize": 29552024
+    },
+    {
+      "range": "016261183-016264756",
+      "bloomHash": "QmeicqMJGmkpea4ar1kBkPen2d5HLpNon3AW1ToaexKb6g",
+      "bloomSize": 1179722,
+      "indexHash": "QmcEoPF2CcFbzfqSDWgfNYJdJghq383SDEV342jYjn3Qs7",
+      "indexSize": 28515840
+    },
+    {
+      "range": "016264757-016268503",
+      "bloomHash": "QmU5CmTafp2UN1dCrW2hcgRAx9nPLHBp5io13ye76xEePJ",
+      "bloomSize": 1310798,
+      "indexHash": "QmbMKF9GR3nks8VzfH1ZkKRwabYV29JScoPcMQQCwPB9UN",
+      "indexSize": 28780484
+    },
+    {
+      "range": "016268504-016271564",
+      "bloomHash": "QmcFxV5yeLYbvkGLHtxijcQDemm521wzLM3ZMQCam5vwNy",
+      "bloomSize": 1179722,
+      "indexHash": "Qmb6P6HLnbNQY5DAGpt72Rqrxjp5BMft83XSK7neyhLAeW",
+      "indexSize": 28090372
+    },
+    {
+      "range": "016271565-016274933",
+      "bloomHash": "QmfU9NF68HgGk1EVUC9tnoPuBDQfc9NGa7BBCPEHCDVbSa",
+      "bloomSize": 1048646,
+      "indexHash": "Qmczdt8eAhNFM7d4Hw4FiwbcRP2eBpNBwurLmEuViajZ1Z",
+      "indexSize": 26338520
+    },
+    {
+      "range": "016274934-016278243",
+      "bloomHash": "QmdVDRvJmyunL4Rc17ici28TTGLGQ7v3NFXX8bnyFKB3di",
+      "bloomSize": 1048646,
+      "indexHash": "QmczS3N1sBNEc81F8AzLYfngUuSg5ctcAtdSvRkt4xAkJB",
+      "indexSize": 26450676
+    },
+    {
+      "range": "016278244-016281591",
+      "bloomHash": "QmWvBr5q6L1uXe9LEhNho2swWUH6AsVN8K5LP5WhniG6EB",
+      "bloomSize": 1048646,
+      "indexHash": "Qmcx1mCu4bqMsfcnQRfNYphtYLRHgU7XMsxYc3QmNgxMPh",
+      "indexSize": 26263648
+    },
+    {
+      "range": "016281592-016285038",
+      "bloomHash": "QmU4e8W8ZZHD6CusbN9WzNzqRiyPDAjHeKXjZ1fhb1chZL",
+      "bloomSize": 1048646,
+      "indexHash": "QmTt24qLbZbdBtHmLGLJriohdnye5eD1WvpqxwSBGa3ko7",
+      "indexSize": 27155696
+    },
+    {
+      "range": "016285039-016288470",
+      "bloomHash": "QmfG7a4HLc3tZgHSK311jsdCC1cQioHcSxBdCfmkev1AoM",
+      "bloomSize": 1048646,
+      "indexHash": "QmRdj67kbzUaG2w33A85R3xjZ8dvxQd9wUWRWTYaAuG8GT",
+      "indexSize": 26323160
+    },
+    {
+      "range": "016288471-016291919",
+      "bloomHash": "QmXzMrwW4A5T7tBf4bsN4S7AiKc3FoSgkZvPSJyQgcwoGY",
+      "bloomSize": 1048646,
+      "indexHash": "QmWgvmS5Cn63T9TSFqqRijwcJrSdogaioYohd6BdvmEDeu",
+      "indexSize": 27189312
+    },
+    {
+      "range": "016291920-016295309",
+      "bloomHash": "QmXW1UUSVfWNzG5cryh3s8hG9J1GxhH8hZfDs3wZNuZs2h",
+      "bloomSize": 1048646,
+      "indexHash": "QmUiSfUDXgUSjC2PJY6uMinP6aWms1JPkj2gtvUAQYQ7SX",
+      "indexSize": 26129456
+    },
+    {
+      "range": "016295310-016298764",
+      "bloomHash": "QmS2gVhUMptTh2Rq1N3syUkmGooA4a8JrdsccCUeitmUuK",
+      "bloomSize": 1179722,
+      "indexHash": "Qmd6MytpZbwdcmomrgGNpxP38h9NhnGxy6zEhfapFt4fua",
+      "indexSize": 27373008
+    },
+    {
+      "range": "016298765-016300000",
+      "bloomHash": "QmVbDb5ipwytt84hy4pCoW6DkPJLoRS77mKJRoTEcQRCoR",
+      "bloomSize": 524342,
+      "indexHash": "QmfU34du86mqU8jszwRNvZs9zbLug4G2AoaazExWgEzpe8",
+      "indexSize": 11082124
+    },
+    {
+      "range": "016300001-016303629",
+      "bloomHash": "QmPFBKD9W1P4Txai7GZVTAxLExJfjFmvfiqLSGaJLMby3i",
+      "bloomSize": 1048646,
+      "indexHash": "QmNWvLcjZhdu2xYDbtvw7HjpPYKqr2xb5b4hJDjvFRbDoW",
+      "indexSize": 27053956
+    },
+    {
+      "range": "016303630-016307238",
+      "bloomHash": "QmYJE3ZQKx89CFfmP4j1L7gA7NTPrVzQUfL6mEkbML3BaS",
+      "bloomSize": 1179722,
+      "indexHash": "QmNUYGQGTp7igsDiBT3fMQY6o1hEgpmFDd2PiapgjU4Qj1",
+      "indexSize": 27299272
+    },
+    {
+      "range": "016307239-016312733",
+      "bloomHash": "QmcXEpotJxTpk1HcWzXfgEoZB1Xf1rX4pmC9hudkTy3qEX",
+      "bloomSize": 1179722,
+      "indexHash": "QmXJWYzzcyxZSHCL5nsAfkPwqmXbaRKH9deGEMjrhY56Ny",
+      "indexSize": 27941104
+    },
+    {
+      "range": "016312734-016316359",
+      "bloomHash": "QmQVqZcTSDkKH5TqCf5UbudmT7RrgCiuQJ8zPP3cZUwFjj",
+      "bloomSize": 917570,
+      "indexHash": "QmVnE772uRdh1toQV26Y2yXm7qfgDGgxmVsiwJps8atQT3",
+      "indexSize": 25654524
+    },
+    {
+      "range": "016316360-016320046",
+      "bloomHash": "QmYjbk1exP2KXTwTY41MLb7Lo3buuwY9DdWaSKrtNRnHmW",
+      "bloomSize": 1048646,
+      "indexHash": "QmUcSbKTHqj7LWdHv7FXGPAEZP41fmmdQrdcczxNphsvCg",
+      "indexSize": 27062900
+    },
+    {
+      "range": "016320047-016323237",
+      "bloomHash": "QmTwM5ZcXFJt8mSQCZKk2PsSe3YnRaZZAC6tvTCRy8CKsw",
+      "bloomSize": 917570,
+      "indexHash": "QmNnWdR3JZ5wfEjCqXLpLmpNVvkFKHRjD72pHgfNuiQa1u",
+      "indexSize": 25284968
+    },
+    {
+      "range": "016323238-016326873",
+      "bloomHash": "QmdhvL2s65C71EEvmjHb4LYu2AW81VYyp2XmgyZzzVxK5s",
+      "bloomSize": 1048646,
+      "indexHash": "QmbwsxPmvyvtYkZvHDkWyiwsp8mPciYTnzXkyj6S5Ad4vG",
+      "indexSize": 26968460
+    },
+    {
+      "range": "016326874-016330029",
+      "bloomHash": "Qmawe3mXND4KauyTRvBn5QvY1twPZCAjWE8wdmJ7BXsDHj",
+      "bloomSize": 917570,
+      "indexHash": "QmRnJrV7rXEkXeGYaEeST6HPzTSSchyDR9QNfA89RGnagA",
+      "indexSize": 24996828
+    },
+    {
+      "range": "016330030-016333321",
+      "bloomHash": "QmSjbXMEJdNhP7aWwwZ9oJ9w2yLupB1hLTF93jb3hF7ymH",
+      "bloomSize": 1048646,
+      "indexHash": "QmSVQSTo1NQYrVn75ripWXTExaHb1fH5gfKWiPrFhf8VYF",
+      "indexSize": 27127236
+    },
+    {
+      "range": "016333322-016336378",
+      "bloomHash": "QmRKngazbSjpk4dVAHX2jjS2Fm6nXUQZDaa3YhQw63fpdT",
+      "bloomSize": 917570,
+      "indexHash": "QmdBswKCtBCt2U9JJyDPAQK7anExfpryyBMVaSuz7XnQPi",
+      "indexSize": 25515008
     }
   ]
 }
